fixed project spacing

--- a/style/style2.css
+++ b/style/style2.css
@@ -47,12 +47,17 @@ header{
     margin: auto;
     margin-bottom: 10vh;
 }
+.myFridgetitle{
+    font-family: 'Josefin Sans', sans-serif;
+    text-align: center;
+    padding-top: 2vh;
 
-h2{
+}
+.chesstitle{
     font-family: 'Josefin Sans', sans-serif;
     margin-top: 5vh;
     padding-top: 10vh;
-    text-align: center;
+    text-align: center
 }
 @media screen and (max-width: 1080px) {
     .languages svg {
